# self_AIModels_code

./: .gitignore  .gitmodules  README.md  delete_submodule.sh
ComfyUI/: Dockerfile  Dockerfile.dev  Dockerfile.export  dev.sh  docker-compose.yaml  export.sh
FunASR/: Dockerfile  Dockerfile.dev  Dockerfile.export  dev.sh  docker-compose.yaml  export.sh  pyproject.toml
LatentSync/: Dockerfile  Dockerfile.dev  dev.sh  docker-compose.yaml  env.sh
LivePortrait/: .dockerignore  docker-compose.yaml  dockerfile
SkyReels-V1/: Dockerfile  Dockerfile.dev  dev.sh  docker-compose.yaml  env.sh  export.sh  link.sh
VACE/: Dockerfile.dev  dev.sh  docker-compose.yaml  env.sh
Wan2.1/: Dockerfile.dev  dev.sh  docker-compose.yaml  env.sh
